testsuite/tests/typecheck/should_fail/tcfail212.stderr

tcfail212.hs:10:7: error: [GHC-83865]
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type signature: f :: (Maybe, Either Int)

tcfail212.hs:10:14: error: [GHC-83865]
    • Expecting one more argument to ‘Either Int’
      Expected a type, but ‘Either Int’ has kind ‘* -> *’
    • In the type signature: f :: (Maybe, Either Int)

tcfail212.hs:13:7: error: [GHC-83865]
    • Expected a lifted type, but ‘Int#’ is an IntRep type
    • In the type signature: g :: (Int#, Int#)

tcfail212.hs:13:13: error: [GHC-83865]
    • Expected a lifted type, but ‘Int#’ is an IntRep type
    • In the type signature: g :: (Int#, Int#)
